--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "zipcacher",
   "version": "0.0.1",
   "description": "Middleware used in ServiceWorkersWare to precache the content from a zip file during SW installation",
-  "main": "index.js",
+  "main": "dist/zipcacher.js",
   "scripts": {
     "preinstall": "bower install && cd bower_components/serviceworkerware && npm install && gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
